# yaspell

./: .gitignore  COPYING  Makefile.am  Makefile.in  aclocal.m4  common.h  configure  configure.ac  dict.c  dict.h  email.c  email.h  fnv1a.h  myers.h  shim.c  shim.h  transform.c  transform.h  vector.h  yaspell.c
test/: sherlock_holmes.txt
yaspell-dict/: british-english  canadian-english  danish  doyle-english  french  italian
